--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" name="viewport" content="width=device-width initial-scale=1.0" />
   <title>tic tac toe</title>
   <!-- css -->
-  <link rel="stylesheet" href="/home/manu/Desktop/tic tac toe/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
     </div>
   </section>
 
-  <script src="/home/manu/Desktop/tic tac toe/index.js" charset="utf-8"></script>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
